--- a/.github/workflows/cloud-tests.yaml
+++ b/.github/workflows/cloud-tests.yaml
@@ -12,24 +12,16 @@ on:
         type: string
         default: main
         description: The image tag to use for the mondoo operator image
-      AZURE_CLIENT_ID:
-        required: true
-        type: string
-        description: Azure client id
-      AZURE_CLIENT_SECRET:
-        required: true
-        type: string
-        description: Azure client secret
-      AZURE_SUBSCRIPTION_ID:
-        required: true
-        type: string
-        description: Azure subscription id
-      AZURE_TENANT_ID:
-        required: true
-        type: string
-        description: Azure tenant id
     secrets:
       MONDOO_CLIENT:
+        required: true
+      AZURE_CLIENT_ID:
+        required: true
+      AZURE_CLIENT_SECRET:
+        required: true
+      AZURE_SUBSCRIPTION_ID:
+        required: true
+      AZURE_TENANT_ID:
         required: true
 
 env:
@@ -42,10 +34,10 @@ jobs:
     name: AKS integration tests
 
     env:
-      ARM_CLIENT_ID: ${{ github.event.inputs.AZURE_CLIENT_ID }}
-      ARM_CLIENT_SECRET: ${{ github.event.inputs.AZURE_CLIENT_SECRET }}
-      ARM_SUBSCRIPTION_ID: ${{ github.event.inputs.AZURE_SUBSCRIPTION_ID }}
-      ARM_TENANT_ID: ${{ github.event.inputs.AZURE_TENANT_ID }}
+      ARM_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
+      ARM_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
+      ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+      ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
     
     strategy:
       matrix:
