--- a/.github/workflows/integration-tests.yaml
+++ b/.github/workflows/integration-tests.yaml
@@ -21,8 +21,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        k8s-version: [v1.22.13, v1.23.10, v1.24.4]
-        k8s-distro: [minikube, k3d]
+        k8s-version: [v1.22.13]
+        k8s-distro: [k3d]
 
     steps:
       - uses: actions/checkout@v3
@@ -38,16 +38,16 @@ jobs:
           memory: 4000m
           kubernetes-version: ${{ matrix.k8s-version }}
 
-      - name: Start k3d
-        uses: nolar/setup-k3d-k3s@v1
-        if: matrix.k8s-distro == 'k3d'
-        with:
-          version: ${{ matrix.k8s-version }}
-          k3d-args: --k3s-arg=--disable=traefik@server:*
+      #- name: Start k3d
+      #  uses: nolar/setup-k3d-k3s@v1
+      #  if: matrix.k8s-distro == 'k3d'
+      #  with:
+      #    version: ${{ matrix.k8s-version }}
+      #    k3d-args: --k3s-arg=--disable=traefik@server:*
 
-      - uses: actions/setup-go@v2
-        with:
-          go-version: "${{ env.golang-version }}"
+      #- uses: actions/setup-go@v2
+      #  with:
+      #    go-version: "${{ env.golang-version }}"
 
       # Makes it easier to see what was the input for this workflow in case we need to debug.
       - name: Print workflow inputs
@@ -60,24 +60,46 @@ jobs:
       # Now that dependencies are cached the tests start almost immediately after minikube has started
       # this makes tests fail occasionally. This sleep gives the runner some time to become more stable
       # before the test execution starts.
-      - name: Wait a bit for the runner to become more stable
-        run: for i in 1 2 3 4 5; do kubectl -n kube-system wait --for=condition=Ready pods --all --timeout=180s && break || sleep 10; done
+      #- name: Wait a bit for the runner to become more stable
+      #  run: for i in 1 2 3 4 5; do kubectl -n kube-system wait --for=condition=Ready pods --all --timeout=180s && break || sleep 10; done
 
-      - name: Run integration tests
-        run: K8S_DISTRO=${{ matrix.k8s-distro }} make test/integration/ci
+      #- name: Run integration tests
+      #  run: K8S_DISTRO=${{ matrix.k8s-distro }} make test/integration/ci
 
-      - run: mv integration-tests.xml integration-tests-${{ matrix.k8s-distro }}-${{ matrix.k8s-version }}.xml
+      #- run: mv integration-tests.xml integration-tests-${{ matrix.k8s-distro }}-${{ matrix.k8s-version }}.xml
+      #  if: success() || failure()
+
+      #- uses: actions/upload-artifact@v3  # upload test results
+      #  if: success() || failure()        # run this step even if previous step failed
+      #  with:                             # upload a combined archive with unit and integration test results
+      #    name: test-results
+      #    path: integration-tests-${{ matrix.k8s-distro }}-${{ matrix.k8s-version }}.xml
+
+      #- name: Upload test logs artifact
+      #  uses: actions/upload-artifact@v3
+      #  if: failure()
+      #  with:
+      #    name: test-logs-${{ matrix.k8s-distro }}-${{ matrix.k8s-version }}
+      #    path: /home/runner/work/mondoo-operator/mondoo-operator/tests/integration/_output/
+
+      - uses: mondoohq/actions/setup@main
+        id: mondoo-status
         if: success() || failure()
-
-      - uses: actions/upload-artifact@v3  # upload test results
-        if: success() || failure()        # run this step even if previous step failed
-        with:                             # upload a combined archive with unit and integration test results
-          name: test-results
-          path: integration-tests-${{ matrix.k8s-distro }}-${{ matrix.k8s-version }}.xml
-
-      - name: Upload test logs artifact
-        uses: actions/upload-artifact@v3
-        if: failure()
         with:
-          name: test-logs-${{ matrix.k8s-distro }}-${{ matrix.k8s-version }}
-          path: /home/runner/work/mondoo-operator/mondoo-operator/tests/integration/_output/
+          service-account-credentials: ${{ secrets.MONDOO_CLIENT }}
+          args: status
+
+      - name: Cleanup Mondoo space "GitHub Actions Mondoo Operator"
+        if: success() || failure()
+        run: |
+          which mondoo
+          echo $MONDOO_CONFIG_PATH
+          ls -l $MONDOO_CONFIG_PATH
+          mondoo version
+          #mondoo --config $MONDOO_CONFIG_PATH status
+          mondoo --config ./creds.json status
+          cat creds.json | jq '.api_endpoint' 
+          cat creds.json | jq '.space_mrn'
+          ./scripts/cleanup_operator_assets.sh
+        env:
+          MONDOO_CONFIG_PATH: ${{ format('{0}/{1}', github.workspace, 'creds.json') }}
