--- a/.github/workflows/cloud-tests.yaml
+++ b/.github/workflows/cloud-tests.yaml
@@ -120,6 +120,7 @@ jobs:
     name: Report test results
     runs-on: ubuntu-latest
     needs: [aks-integration-test]
+    if: always()
     steps:
     - uses: dorny/test-reporter@v1
       with:
