Debugging actions file
Signed-off-by: Christian Zunker <christian@mondoo.com>

--- a/.github/workflows/cloud-tests.yaml
+++ b/.github/workflows/cloud-tests.yaml
@@ -138,7 +138,7 @@ jobs:
         k8s-version: ["1.22", "1.23"]
 
     env:
-      TF_VAR_test_name: ${{ env.MONDOO_OPERATOR_IMAGE_TAG }}
+      TF_VAR_test_name: ${{ github.event.inputs.mondooOperatorImageTag }}
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       AWS_REGION: ${{ github.event.inputs.AWS_REGION }}
