--- a/.github/workflows/cloud-tests.yaml
+++ b/.github/workflows/cloud-tests.yaml
@@ -12,11 +12,6 @@ on:
         type: string
         default: main
         description: The image tag to use for the mondoo operator image
-      AWS_REGION:
-        required: true
-        type: string
-        default: us-east-2
-        description: AWS region where we create the EKS cluster
     secrets:
       MONDOO_CLIENT:
         required: true
@@ -141,15 +136,9 @@ jobs:
       TF_VAR_test_name: ${{ github.event.inputs.mondooOperatorImageTag }}
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      AWS_REGION: ${{ github.event.inputs.AWS_REGION }}
+      AWS_REGION: us-east-2
 
     steps:
-      - name: hide values
-        run: |
-          echo "::add-mask::${{ github.event.inputs.AWS_ACCESS_KEY_ID }}"
-          echo "::add-mask::${{ github.event.inputs.AWS_SECRET_ACCESS_KEY }}"
-          echo "::add-mask::${{ github.event.inputs.AWS_SESSION_TOKEN }}"
-
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0 # fetch is needed for "git tag --list" in the Makefile
