--- a/.github/workflows/integration-tests.yaml
+++ b/.github/workflows/integration-tests.yaml
@@ -95,13 +95,11 @@ jobs:
           which mondoo
           echo $MONDOO_CONFIG_PATH
           ls -l $MONDOO_CONFIG_PATH
+          alias mondoo="mondoo --config $MONDOO_CONFIG_PATH"
           echo "mondoo version"
           mondoo version
           #mondoo --config $MONDOO_CONFIG_PATH status
           echo "mondoo status"
-          mondoo status || true
-          echo "mondoo status w/ export"
-          export MONDOO_CONFIG_PATH
           mondoo status || true
           cat creds.json | jq '.api_endpoint' 
           cat creds.json | jq '.space_mrn'
