--- a/.github/workflows/integration-tests.yaml
+++ b/.github/workflows/integration-tests.yaml
@@ -95,14 +95,9 @@ jobs:
           which mondoo
           echo $MONDOO_CONFIG_PATH
           ls -l $MONDOO_CONFIG_PATH
-          alias mondoo="mondoo --config ./creds.json"
-          echo "mondoo version"
           mondoo version
-          #mondoo --config $MONDOO_CONFIG_PATH status
           echo "mondoo status"
-          mondoo status || true
-          cat creds.json | jq '.api_endpoint' 
-          cat creds.json | jq '.space_mrn'
+          mondoo --config ./creds.json status
           ./scripts/cleanup_operator_assets.sh
         env:
           MONDOO_CONFIG_PATH: ${{ format('{0}/{1}', github.workspace, 'creds.json') }}
