--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -35,6 +35,43 @@ jobs:
         with:
           name: test-results
           path: unit-tests.xml
+  security-tests:
+    needs: [unit-tests]
+    runs-on: ubuntu-latest
+    name: Security tests
+    steps:
+      - uses: actions/checkout@v3
+      - name: Import environment variables from file
+        run: cat ".github/env" >> $GITHUB_ENV
+      - name: Setup Mondoo
+        uses: mondoohq/actions/setup@main
+        with:
+          service_account_credentials: ${{ secrets.MONDOO_CLIENT }}
+      - name: Scan terraform with Mondoo
+        uses: mondoohq/actions@main
+        with:
+          service_account_credentials: ${{ secrets.MONDOO_CLIENT }}
+          scan_type: terraform
+          path: ".github/terraform"
+      - name: Generate manifests
+        run: make generate-manifests IMG='${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.RELEASE }}'
+      - name: Scan Kubernetes Manifest with Mondoo
+        uses: mondoohq/actions@main
+        with:
+          service_account_credentials: ${{ secrets.MONDOO_CLIENT }}
+          scan_type: k8s
+          path: "mondoo-operator-manifests.yaml"
+      - name: Scan Dockerfile with Mondoo
+        uses: mondoohq/actions@main
+        with:
+          service_account_credentials: ${{ secrets.MONDOO_CLIENT }}
+          scan_type: docker_image_from_dockerfile
+          path: Dockerfile
+      - uses: actions/upload-artifact@v3  # upload test results
+        if: success() || failure()        # run this step even if previous step failed
+        with:
+          name: test-results
+          path: security-tests.xml
   integration-tests:
     needs: [unit-tests]
     uses: ./.github/workflows/integration-tests.yaml
