--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -105,6 +105,12 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           tags: ${{ steps.meta.outputs.tags }}
 
+      - name: Scan Image
+        uses: mondoohq/actions/docker-image@main
+        with:
+          service-account-credentials: ${{ secrets.MONDOO_CLIENT }}
+          image: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}@${{ steps.build-and-push-operator.outputs.digest }}
+
       # Sign the resulting Docker image digest except on PRs.
       # This will only write to the public Rekor transparency log when the Docker
       # repository is public to avoid leaking data.  If you would like to publish
