--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -35,6 +35,37 @@ jobs:
         with:
           name: test-results
           path: unit-tests.xml
+  security-tests:
+    needs: [unit-tests]
+    runs-on: ubuntu-latest
+    name: Security tests
+    env:
+      # Use docker.io for Docker Hub if empty
+      REGISTRY: ghcr.io
+      # github.repository as <account>/<repo>
+      IMAGE_NAME: ${{ github.repository }}
+      RELEASE: ${{ github.ref_name }}
+    steps:
+      - uses: actions/checkout@v3
+      - name: Import environment variables from file
+        run: cat ".github/env" >> $GITHUB_ENV
+      - name: Scan AWS terraform with Mondoo
+        uses: mondoohq/actions/terraform@main
+        with:
+          service-account-credentials: ${{ secrets.MONDOO_CLIENT }}
+          path: ".github/terraform/aws/main.tf"
+      - name: Scan Azure terraform with Mondoo
+        uses: mondoohq/actions/terraform@main
+        with:
+          service-account-credentials: ${{ secrets.MONDOO_CLIENT }}
+          path: ".github/terraform/aks/main.tf"
+      - name: Generate manifests
+        run: make generate-manifests IMG='${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.RELEASE }}'
+      - name: Scan Kubernetes Manifest with Mondoo
+        uses: mondoohq/actions/k8s-manifest@main
+        with:
+          service-account-credentials: ${{ secrets.MONDOO_CLIENT }}
+          path: "mondoo-operator-manifests.yaml"
   integration-tests:
     needs: [unit-tests]
     uses: ./.github/workflows/integration-tests.yaml
