--- a/.github/workflows/cloud-tests.yaml
+++ b/.github/workflows/cloud-tests.yaml
@@ -233,7 +233,7 @@ jobs:
         run: cat ".github/env" >> $GITHUB_ENV
 
       - name: Setup GCP service account
-        run: echo ${{ secrets.GCP_SERVICE_ACCOUNT }} > gcp_sa.json
+        run: echo ${{ secrets.GCP_SERVICE_ACCOUNT }} | base64 -d > gcp_sa.json
 
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v1
