--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -1,6 +1,7 @@
-name: Tests
+name: Unit Tests
 on:
   pull_request:
+    types: [opened, synchronize, reopened, labeled]
   push:
     paths-ignore:
       - 'docs/**'
@@ -8,6 +9,10 @@ on:
       - "main"
     tags: ["v*.*.*"]
 
+################################################################################
+# These Jobs do not have access to secrets!
+# Only the re-usable workflows called below have access to secrets.
+################################################################################
 jobs:
   unit-tests:
     runs-on: ubuntu-latest
@@ -35,37 +40,13 @@ jobs:
         with:
           name: test-results
           path: unit-tests.xml
+
   security-tests:
     needs: [unit-tests]
-    runs-on: ubuntu-latest
+    uses: ./.github/workflows/security-tests.yaml
+    if: needs.unit-tests.result == 'success' # run only if unit-tests are successful
     name: Security tests
-    env:
-      # Use docker.io for Docker Hub if empty
-      REGISTRY: ghcr.io
-      # github.repository as <account>/<repo>
-      IMAGE_NAME: ${{ github.repository }}
-      RELEASE: ${{ github.ref_name }}
-    steps:
-      - uses: actions/checkout@v3
-      - name: Import environment variables from file
-        run: cat ".github/env" >> $GITHUB_ENV
-      - name: Scan AWS Terraform with Mondoo
-        uses: mondoohq/actions/terraform-hcl@main
-        with:
-          service-account-credentials: ${{ secrets.MONDOO_CLIENT }}
-          path: ".github/terraform/aws/main.tf"
-      - name: Scan Azure Terraform with Mondoo
-        uses: mondoohq/actions/terraform-hcl@main
-        with:
-          service-account-credentials: ${{ secrets.MONDOO_CLIENT }}
-          path: ".github/terraform/aks/main.tf"
-      - name: Generate manifests
-        run: make generate-manifests IMG='${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.RELEASE }}'
-      - name: Scan Kubernetes Manifest with Mondoo
-        uses: mondoohq/actions/k8s-manifest@main
-        with:
-          service-account-credentials: ${{ secrets.MONDOO_CLIENT }}
-          path: "mondoo-operator-manifests.yaml"
+    secrets: inherit
   integration-tests:
     needs: [unit-tests]
     uses: ./.github/workflows/integration-tests.yaml
