--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -22,5 +22,5 @@ jobs:
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v3
         with:
-          version: v1.48
-          args: --timeout=5m0s --enable gofumpt
+          version: v1.49
+          args: --timeout=5m0s
