implement resource monitors for create and update
Signed-off-by: Ivan Milchev <ivan@mondoo.com>

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -20,7 +20,10 @@
             "request": "launch",
             "mode": "auto",
             "program": "${workspaceRoot}/cmd/mondoo-operator/main.go",
-            "args": ["operator"]
+            "args": ["operator"],
+            "env": {
+                "MONDOO_NAMESPACE_OVERRIDE": "mondoo-operator"
+            }
         }
     ]
 }
