fix linter error extend RBAC for operator so resource monitor can work properly
Signed-off-by: Ivan Milchev <ivan@mondoo.com>

--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -69,9 +69,13 @@ rules:
 - apiGroups:
   - ""
   resources:
+  - daemonsets
+  - jobs
   - namespaces
   - nodes
   - pods
+  - replicasets
+  - statefulsets
   verbs:
   - get
   - list
