--- a/.github/workflows/security-tests.yaml
+++ b/.github/workflows/security-tests.yaml
@@ -9,10 +9,7 @@ jobs:
   security-tests:
     runs-on: ubuntu-latest
     name: Security tests
-    if: |
-      ! github.event.pull_request.head.repo.fork ||
-      (github.event.pull_request.head.repo.fork && github.actor == 'dependabot[bot]') ||
-      (github.event.pull_request.head.repo.fork && contains(github.event.pull_request.labels.*.name, 'safe to test'))
+    if: ! github.event.pull_request.head.repo.fork || github.actor == 'dependabot[bot]'
     env:
       # Use docker.io for Docker Hub if empty
       REGISTRY: ghcr.io
