--- a/.github/workflows/integration-tests.yaml
+++ b/.github/workflows/integration-tests.yaml
@@ -17,7 +17,7 @@ jobs:
   integration-tests:
     runs-on: ubuntu-latest
     name: Integration tests
-    if: ! github.event.pull_request.head.repo.fork || github.actor == 'dependabot[bot]'
+    if: github.actor == 'dependabot[bot]' || !github.event.pull_request.head.repo.fork
     strategy:
       fail-fast: false
       matrix:
