--- a/.github/workflows/security-tests.yaml
+++ b/.github/workflows/security-tests.yaml
@@ -9,7 +9,7 @@ jobs:
   security-tests:
     runs-on: ubuntu-latest
     name: Security tests
-    if: ! github.event.pull_request.head.repo.fork || github.actor == 'dependabot[bot]'
+    if: github.actor == 'dependabot[bot]' || !github.event.pull_request.head.repo.fork
     env:
       # Use docker.io for Docker Hub if empty
       REGISTRY: ghcr.io
