--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -25,6 +25,26 @@ rules:
   - replicasets
   - statefulsets
   verbs:
+  - get
+  - list
+  - watch
+- apiGroups:
+  - apps
+  resources:
+  - deployments
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - batch
+  resources:
+  - cronjobs
+  verbs:
   - create
   - delete
   - get
@@ -38,12 +58,8 @@ rules:
   - cronjobs
   - jobs
   verbs:
-  - create
-  - delete
   - get
   - list
-  - patch
-  - update
   - watch
 - apiGroups:
   - cert-manager.io
