⭐️ Scan workloads on create/update (#561)
* implement resource monitors for create and update

Signed-off-by: Ivan Milchev <ivan@mondoo.com>

* fix linter error
extend RBAC for operator so resource monitor can work properly

Signed-off-by: Ivan Milchev <ivan@mondoo.com>

* implemented ScanApiStore to handle scan API URLs

Signed-off-by: Ivan Milchev <ivan@mondoo.com>

* implement scanning of single asset on create/update

Signed-off-by: Ivan Milchev <ivan@mondoo.com>

* fix failing unit tests

Signed-off-by: Ivan Milchev <ivan@mondoo.com>

* added unit tests

Signed-off-by: Ivan Milchev <ivan@mondoo.com>

* process review comments

Signed-off-by: Ivan Milchev <ivan@mondoo.com>

* limit rbac

Signed-off-by: Ivan Milchev <ivan@mondoo.com>

Signed-off-by: Ivan Milchev <ivan@mondoo.com>

--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -20,6 +20,17 @@ rules:
 - apiGroups:
   - apps
   resources:
+  - daemonsets
+  - deployments
+  - replicasets
+  - statefulsets
+  verbs:
+  - get
+  - list
+  - watch
+- apiGroups:
+  - apps
+  resources:
   - deployments
   verbs:
   - create
@@ -40,6 +51,15 @@ rules:
   - list
   - patch
   - update
+  - watch
+- apiGroups:
+  - batch
+  resources:
+  - cronjobs
+  - jobs
+  verbs:
+  - get
+  - list
   - watch
 - apiGroups:
   - cert-manager.io
@@ -83,15 +103,6 @@ rules:
   verbs:
   - create
   - delete
-- apiGroups:
-  - ""
-  resourceNames:
-  - mondoo-client
-  - mondoo-private-registries-secrets
-  - mondoo-token
-  resources:
-  - secrets
-  verbs:
   - get
 - apiGroups:
   - ""
