--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -49,13 +49,13 @@ jobs:
       - uses: actions/checkout@v3
       - name: Import environment variables from file
         run: cat ".github/env" >> $GITHUB_ENV
-      - name: Scan AWS terraform with Mondoo
-        uses: mondoohq/actions/terraform@main
+      - name: Scan AWS Terraform with Mondoo
+        uses: mondoohq/actions/terraform-hcl@main
         with:
           service-account-credentials: ${{ secrets.MONDOO_CLIENT }}
           path: ".github/terraform/aws/main.tf"
-      - name: Scan Azure terraform with Mondoo
-        uses: mondoohq/actions/terraform@main
+      - name: Scan Azure Terraform with Mondoo
+        uses: mondoohq/actions/terraform-hcl@main
         with:
           service-account-credentials: ${{ secrets.MONDOO_CLIENT }}
           path: ".github/terraform/aks/main.tf"
