--- a/.github/workflows/security-tests.yaml
+++ b/.github/workflows/security-tests.yaml
@@ -11,7 +11,9 @@ on:
 
 # https://docs.github.com/en/actions/security-guides/automatic-token-authentication#permissions-for-the-github_token
 permissions:
-  contents: read
+      contents: read
+      pull-requests: read
+      actions: read
 # Attention: These jobs still have access to all the secrets when triggered by a workflow_run event.
 
 jobs:
@@ -28,7 +30,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+          ref: ${{ github.event.pull_request.head.sha }}
           persist-credentials: false
       - name: Import environment variables from file
         run: cat ".github/env" >> $GITHUB_ENV
